fix(tup-ui): page layout spacing & use global vars

--- a/apps/tup-ui/src/pages/Projects/Projects.module.css
+++ b/apps/tup-ui/src/pages/Projects/Projects.module.css
@@ -1,7 +1,5 @@
 .project-header {
     font-size: 2.6rem;
-    margin-top: 12px;
-    margin-left: 24px;
-    border-bottom: 1px solid #707070;
+    border-bottom: var(--global-border-width--normal) solid var(--global-color-primary--dark);
     padding-bottom: 5px;
 }
